--- a/practicum/week-1/index.html
+++ b/practicum/week-1/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://habahram.github.io/ISTA330/practicum/week-1/tests.js" type="text/javascript"></script>
    
-    <title>Document hi</title>
+    <title>Document</title>
 </head>
 <body>
     <div>
